<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity3">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/grid_layout"
        android:textSize="35sp"
        android:textColor="#DF1010"
        android:layout_gravity="center"
        android:layout_marginTop="40sp"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_margin="30sp"
        android:columnCount="4"
        android:rowCount="6">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio"
            android:textAlignment="center"
            android:textSize="25sp" />

        <RadioGroup
            android:layout_columnSpan="3"
            android:orientation="horizontal">
        <RadioButton
            android:id="@+id/radioA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:checked="true"
            android:text="@string/a"
            android:textAlignment="center"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/radioB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp"
            android:text="@string/b"
            android:textAlignment="center"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/radioC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp"
            android:text="@string/c"
            android:textAlignment="center"
            android:textSize="25sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowSpan="3"
            android:layout_gravity="center"
            android:text="@string/checkbox"
            android:textAlignment="center"
            android:textSize="25sp" />

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnSpan="3"
            android:layout_gravity="start"
            android:layout_marginStart="30sp"
            android:layout_marginTop="30sp"
            android:text="@string/movie"
            android:textSize="25sp" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnSpan="3"
            android:layout_gravity="start"
            android:layout_marginStart="30sp"
            android:text="@string/games"
            android:textSize="25sp" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_columnSpan="3"
            android:layout_gravity="start"
            android:layout_marginStart="30sp"
            android:text="@string/cartoon"
            android:textSize="25sp" />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:tooltipText="progress"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnSpan="4"
            android:layout_gravity="center"
            android:layout_marginTop="40sp"
            android:textAlignment="center"
            android:progressTint="#DCAE25"
            android:progress="75"/>

        <RatingBar
            android:id="@+id/ratingBar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_columnSpan="4"
            android:layout_marginTop="40sp"
            android:layout_gravity="center"
            android:textAlignment="center" />

    </GridLayout>

    <Button
        android:id="@+id/myButtonToConstraint"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_gravity="center"
        android:text="@string/next"/>

</GridLayout>